--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/Sign_up.jsp=UTF-8
 encoding//WebContent/post.jsp=UTF-8
+encoding//src/com/soccer/mysqlUtil/MysqlHelper.java=UTF-8
